# pycopy

./: pyproject.toml  test.json  version_script.py
pycopy/: __init__.py  fs_sync.py  version.py
pysync/: __init__.py  logging.py
