[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysync"
version = "2025.1.0" # version
authors = [
    { name = "Guenthner", email = "guenthner.jonathan@gmail.com" },
]
description = "A simple python script (cli and package) for syncing files between directories"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent
]
dependencies = [
]
keywords = ["Files", "Syncing"]

[project.scripts]
pysync = "pysync:command_entry_point"